--- a/Assignment_3/Register.html
+++ b/Assignment_3/Register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 
-    <link rel="stylesheet" href="register.css">
+    <link rel="stylesheet" href="Register.css">
     <script src="register.js" defer></script>
 </head>
 
@@ -29,6 +29,7 @@
                 <input type="tel" id="phone" required>
 
                 <input type="submit" value="Register">
+                <p>Already have an account?..<a href="login.html">login here</a></p>
             </form>
         </div>
     </div>
